<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <EditText
        android:id="@+id/txtViewResult"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="bottom|right"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        tools:text="result" />

    <EditText
        android:id="@+id/txtViewCalculation"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="bottom|right"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResult"
        tools:text="input" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/txtViewCalculation">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="Clear"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="Back"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btnDivide"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn7"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn8"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn9"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btnMultiply"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn4"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn5"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn6"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnSubtract"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btnSubtract"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn1"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn2"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn3"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btnAdd"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btn0"
                android:textColor="#000000" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnDecimal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btnDecimal"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnEquals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/btnEquals"
                android:textColor="#000000" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>